# chen-optimum-temperature

./: README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
chen_optimum_temperature/: __init__.py  chen_optimum_temperature.py  version.py
notebooks/: Optimum Temperature.ipynb
tests/: test_import_chen_optimum_temperature.py  test_import_dependencies.py
